--- a/Python_Assignments/Python_Day_1_Assignment.ipynb
+++ b/Python_Assignments/Python_Day_1_Assignment.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Question 1\n",
     "\n",
-    "### Problem Description\n",
+    "### Problem Descriptio\n",
     "\n",
     "Take a name A as input from the user and print \"Hello A\", where A is the name in input.\n",
     "\n",
